--- a/protected/config/config.ini
+++ b/protected/config/config.ini
@@ -1,6 +1,9 @@
 [database]
-HOST = "127.0.0.1"
+HOST = 127.0.0.1
 PORT = 3306
 DBNAME = monitor
 USER = root
 PASSWD = ""
+[monitor]
+CLI_PATH = /usr/bin/php
+LOG_PATH = /tmp
